# pcx

./: .clang-format  .clang-tidy  CMakeKits.json  CMakeLists.txt  LICENSE.md  README.md  TODO.md
cmake/: pcx-config.cmake.in  set_if_undefined.cmake
docs/internal/: fft_impl.md  tupi.md
inc/pcx/: fft.hpp  types.hpp
inc/pcx/include/: br_sorter.hpp  fft_impl.hpp  ituple.hpp  meta.hpp  tupi.hpp  tuple.hpp  types.hpp
inc/pcx/include/fft/: fft_impl.hpp  permuters.hpp  sorters.hpp  util.hpp
inc/pcx/include/meta/: types.hpp
inc/pcx/include/simd/: common.hpp  math.hpp  traits.hpp
inc/pcx/include/simd/x86/: f32-traits.hpp  f64-traits.hpp  traits.hpp
inc/pcx/simd/: cx_math.hpp  math.hpp
inc/pcx/simd/avx/: common.hpp
inc/pcx/simd/x86/: traits.hpp
include/pcx/: fft.hpp  par_fft.hpp
include/pcx/include/: types.hpp
include/pcx/include/fft/: fft_impl.hpp  fft_interface_common.hpp  permuters.hpp  util.hpp
include/pcx/include/simd/: common.hpp  math.hpp  traits.hpp
src/: fft.cpp  par_fft.cpp
tests/: test_fft.cpp  test_fft.h  test_fft_main.cpp  test_simd.cpp  test_tuples.cpp
tests/fft/: asm_explorer.cpp  common.cpp  common.hpp  f32_node16.cpp  f32_node2.cpp  f32_node4.cpp  f32_node8.cpp  f32_w16.cpp  f32_w16par.cpp  f32_w4.cpp  f32_w8.cpp  f64_node16.cpp  f64_node2.cpp  f64_node4.cpp  f64_node8.cpp  f64_w2.cpp  f64_w4.cpp  f64_w8.cpp  fft_if.cpp  fft_main.cpp  fft_w1.cpp  impl-test.hpp  par_f32_w16.cpp  par_f32_w4.cpp  par_f32_w8.cpp  par_f64_w2.cpp  par_f64_w4.cpp  par_f64_w8.cpp  parc_f32_w16.cpp  parc_f32_w4.cpp  parc_f32_w8.cpp  parc_f64_w2.cpp  parc_f64_w4.cpp  parc_f64_w8.cpp  prototype_par.cpp  prototype_parc.cpp  prototype_seq.cpp  sort.cpp
